--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!--vcard-profile photo-->
         <div class= "vcard-profile-photo">
           <img src= "https://avatars3.githubusercontent.com/u/39204805?s=460&u=e505f22c94d89ca10fce9c8a7b6f5c46aef422cf&v=4" id="profile-pic2" alt= ""/>
-          <img src="https://media.licdn.com/media/AAEAAQAAAAAAAAjPAAAAJGVlODdjNjUxLTVjNGUtNDMyMC1hMmQ2LTc3NTQwYTkwNWNhMg.jpg" id="profile-pic1" class= "profileActive" alt= ""/>
+          <img src="https://st2.depositphotos.com/3096625/9586/v/450/depositphotos_95869784-stock-illustration-l-letter-logo-emblem.jpg" id="profile-pic1" class= "profileActive" alt= ""/>
         </div>
         <!--End of vcard-profile photo-->
         
@@ -473,7 +473,7 @@
         <!-- Project Item-->
           <div class="project-item">
             <!-- Thumbnail Background-->
-          <a href="https://premnathramanathan.000webhostapp.com/Content/PW_app_arch.jpg" class="project-thumbnail nivobox" data-lightbox-gallery="portfolio" style="background-image: url('https://premnathramanathan.000webhostapp.com/Content/PW_app_arch.jpg');">
+          <a href="" class="project-thumbnail nivobox" data-lightbox-gallery="portfolio" style="background-image: url('');">
                 <!-- project-description -->
                 <div class="project-description-wrapper">
                   <div class="project-description">
@@ -489,7 +489,7 @@
         <!-- /Project Item 2-->
                   <div class="project-item">
             <!-- Thumbnail Background-->
-          <a href="https://premnathramanathan.000webhostapp.com/Content/PW_2.jpg" class="project-thumbnail nivobox" data-lightbox-gallery="portfolio" style="background-image: url('https://premnathramanathan.000webhostapp.com/Content/PW_2.jpg');">
+          <a href="" class="project-thumbnail nivobox" data-lightbox-gallery="portfolio" style="background-image: url('');">
                 <!-- project-description -->
                 <div class="project-description-wrapper">
                   <div class="project-description">
@@ -565,7 +565,7 @@
     <!-- Nivo box Image slider-->
     <!--<div class="nivo-lightbox-overlay nivo-lightbox-theme-default nivo-lightbox-effect-fade nivo-lightbox-open">
       <div class="nivo-lightbox-wrap">
-        <div class="nivo-lightbox-content"><div class="nivo-lightbox-image" style="line-height: 618px; height: 618px;"><img src="https://premnathramanathan.000webhostapp.com/Content/PW_2.jpg"></div>
+        <div class="nivo-lightbox-content"><div class="nivo-lightbox-image" style="line-height: 618px; height: 618px;"><img src=""></div>
         </div>
         <div class="nivo-lightbox-title-wrap"></div>
           </div>
@@ -578,9 +578,6 @@
       <!--End of Main Container-->
   </section>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-database.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-analytics.js"></script>
     <script src="Jss.js"></script>
   </body>
 </html>
