--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <div class="vcard-body section-home" id="section-home">
         <!--vcard-profile photo-->
         <div class= "vcard-profile-photo">
-          <img src= "https://avatars3.githubusercontent.com/u/39204805?s=460&u=e505f22c94d89ca10fce9c8a7b6f5c46aef422cf&v=4" id="profile-pic2" alt= ""/>
-          <img src="https://st2.depositphotos.com/3096625/9586/v/450/depositphotos_95869784-stock-illustration-l-letter-logo-emblem.jpg" id="profile-pic1" class= "profileActive" alt= ""/>
+          <img src= "https://avatars0.githubusercontent.com/u/39204805?s=460&u=a86ca3b314859561af8e4b7a38981e176c62f7be&v=4" id="profile-pic2" alt= ""/>
+          <img src="ll.png" id="profile-pic1" class= "profileActive" alt= ""/>
         </div>
         <!--End of vcard-profile photo-->
         
@@ -65,7 +65,7 @@
           <div class= "description-footer">
             <!--Item-->
             <div class= "description-footer-item">
-              <p class="active">email : leonardo.lucas@unesp.br / phone : +55(12) 99158-2819 </p>
+              <p class="active">email : leonardo.lucas@unesp.br / phone : +55 (12) 99158-2819 </p>
             </div>
             <!--End of Item-->
           </div>
@@ -99,7 +99,7 @@
           <!--Buttons-->
           <div class="resume-buttons page-buttons">
             <!--Download CV button-->
-            <a href="link here" class="btn btn-default btn-default2" download><i class="fa fa-download"></i>&nbsp; Download my resume</a>
+            <a href="Resume - Leonardo Lucas Ferreira.pdf" class="btn btn-default btn-default2" download><i class="fa fa-download"></i>&nbsp; Download my resume</a>
             <!--/Download CV button-->
             <!--Get in Touch Button-->
              <a href="#page-contact" class="btn btn-default btn-default2 link-page"><i class="fa fa-download"></i>&nbsp; Get in touch</a>
@@ -221,7 +221,7 @@
           <!--Buttons-->
           <div class="resume-buttons page-buttons">
             <!--Download CV button-->
-            <a href="Curriculo aqui" class="btn btn-default btn-default2"><i class="fa fa-download"></i>&nbsp; Download my resume</a>
+            <a href="Resume - Leonardo Lucas Ferreira.pdf" class="btn btn-default btn-default2"><i class="fa fa-download"></i>&nbsp; Download my resume</a>
             <!--/Download CV button-->
             <!--Get in Touch Button-->
              <a href="#page-contact" class="btn btn-default btn-default2 link-page"><i class="fa fa-download"></i>&nbsp; Get in touch</a>
@@ -257,11 +257,11 @@
             <!-- item-list -->
                       <li>
                         <div class="progress">
-                          <div class="progress-bar progress-bar-2" role="progressbar" data-percent="75%" style="width: 75%;">
-                              <span class="sr-only">75% Complete</span>
+                          <div class="progress-bar progress-bar-2" role="progressbar" data-percent="95%" style="width: 95%;">
+                              <span class="sr-only">95% Complete</span>
                           </div>
                           <span class="progress-type">Perseverance and motivation</span>
-                          <span class="progress-completed">7.5 / 10</span>
+                          <span class="progress-completed">9.5 / 10</span>
                         </div>
                       </li>
                       <!-- /item list -->
@@ -387,22 +387,22 @@
                           <!-- item-list -->
                       <li>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" data-percent="85%" style="width: 85%;">
-                              <span class="sr-only">85% Complete</span>
+                          <div class="progress-bar" role="progressbar" data-percent="65%" style="width: 65%;">
+                              <span class="sr-only">65% Complete</span>
                           </div>
                           <span class="progress-type">SOAP</span>
-                          <span class="progress-completed">8.5 / 10</span>
+                          <span class="progress-completed">6.5 / 10</span>
                         </div>
                       </li>
                       <!-- /item list -->
             <!-- item-list -->
                       <li>
                         <div class="progress">
-                          <div class="progress-bar progress-bar-2" role="progressbar" data-percent="75%" style="width: 75%;">
-                              <span class="sr-only">75% Complete</span>
+                          <div class="progress-bar progress-bar-2" role="progressbar" data-percent="65%" style="width: 65%;">
+                              <span class="sr-only">65% Complete</span>
                           </div>
-                          <span class="progress-type">Aamazon Web Services (AWS)</span>
-                          <span class="progress-completed">7.5 / 10</span>
+                          <span class="progress-type">Amazon Web Services (AWS)</span>
+                          <span class="progress-completed">6.5 / 10</span>
                         </div>
                       </li>
                       <!-- /item list -->
@@ -428,11 +428,11 @@
                           <!-- item-list -->
                       <li>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" data-percent="75%" style="width: 75%;">
-                              <span class="sr-only">75% Complete</span>
+                          <div class="progress-bar" role="progressbar" data-percent="65%" style="width: 65%;">
+                              <span class="sr-only">65% Complete</span>
                           </div>
-                          <span class="progress-type">Java Spring/ JSF / JSP</span>
-                          <span class="progress-completed">7.5 / 10</span>
+                          <span class="progress-type">React</span>
+                          <span class="progress-completed">6.5 / 10</span>
                         </div>
                       </li>
                       <!-- /item list -->
@@ -442,7 +442,7 @@
                           <div class="progress-bar progress-bar-2" role="progressbar" data-percent="60%" style="width: 60%;">
                               <span class="sr-only">60% Complete</span>
                           </div>
-                          <span class="progress-type">Selenium / Cocoa Touch</span>
+                          <span class="progress-type">Express (Node.js)</span>
                           <span class="progress-completed">6.0 / 10</span>
                         </div>
                       </li>
@@ -450,11 +450,11 @@
             <!-- item-list -->
                       <li>
                         <div class="progress">
-                          <div class="progress-bar progress-bar-3" role="progressbar" data-percent="40%" style="width: 40%;">
-                              <span class="sr-only">40% Complete</span>
+                          <div class="progress-bar progress-bar-3" role="progressbar" data-percent="70%" style="width: 70%;">
+                              <span class="sr-only">70% Complete</span>
                           </div>
-                          <span class="progress-type">AngularJS</span>
-                          <span class="progress-completed">4.0 / 10</span>
+                          <span class="progress-type">Bootstrap</span>
+                          <span class="progress-completed">7.0 / 10</span>
                         </div>
                       </li>
                       <!-- /item list -->
