--- a/index.html
+++ b/index.html
@@ -525,17 +525,17 @@
             <!--/form element-->
                      <!--form element-->
             <div class="form-element">
-                       <input class="form-control required" id="email" name="email" placeholder="Email" type="email" required/>
+                       <input class="form-control required" id="email" value ='email' name="email" placeholder="Email" type="email" required/>
             </div>
             <!--/form element-->
                      <!--form element-->
             <div class="form-element">
-                       <input class="form-control required" id="subject" name="subject" placeholder="Subject" type="text" required/>
+                       <input class="form-control required" id="subject" name="subject" value = 'subject' placeholder="Subject" type="text" required/>
             </div>
             <!--/form element-->
                      <!--form element-->
             <div class="form-element">
-                       <textarea class="form-control required" id="message" name="message" placeholder="Message" type="textarea" rows=5 required></textarea>
+                       <textarea class="form-control required" id="message" value ='message' name="message" placeholder="Message" type="textarea" rows=5 required></textarea>
             </div>
             <!--/form element-->
             <!--form element-->
@@ -579,5 +579,6 @@
   </section>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="Jss.js"></script>
+    <!-- <script src="contact.js"></script> -->
   </body>
 </html>
